# chrome_remote

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  main.cpp  meson.build  meson_options.txt
include/chrome_remote/: asio_continuable.h  browser.h  chrome_remote.h
src/: browser.cpp  chrome_remote.cpp
tools/: run.sh  upload_conanfile.sh
